## Process this file with automake to produce Makefile.in.
#
# -----------------------------------------------------------------------------
# $Id: Makefile.am,v 1.1 2003/11/08 21:28:16 raif Exp $
#
# Copyright (C) 2003 Free Software Foundation, Inc.
#
# This file is part of GNU Crypto.
#
# GNU Crypto is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
#
# GNU Crypto is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; see the file COPYING.  If not, write to the
#
#    Free Software Foundation Inc.,
#    59 Temple Place - Suite 330,
#    Boston, MA 02111-1307
#    USA
#
# Linking this library statically or dynamically with other modules is
# making a combined work based on this library.  Thus, the terms and
# conditions of the GNU General Public License cover the whole
# combination.
#
# As a special exception, the copyright holders of this library give
# you permission to link this library with independent modules to
# produce an executable, regardless of the license terms of these
# independent modules, and to copy and distribute the resulting
# executable under terms of your choice, provided that you also meet,
# for each linked independent module, the terms and conditions of the
# license of that module.  An independent module is a module which is
# not derived from or based on this library.  If you modify this
# library, you may extend this exception to your version of the
# library, but you are not obligated to do so.  If you do not wish to
# do so, delete this exception statement from your version.
# -----------------------------------------------------------------------------
#
# $Revision: 1.1 $
#

EXTRA_DIST = \
 assembly_class_diag.eps \
 assembly_class_diag.pdf \
 assembly_class_diag.png \
 assembly_class_diag.txt \
 cascade_class_diag.eps \
 cascade_class_diag.pdf \
 cascade_class_diag.png \
 cascade_class_diag.txt \
 cipher_class_diag.eps \
 cipher_class_diag.pdf \
 cipher_class_diag.png \
 cipher_class_diag.txt \
 hash_class_diag.eps \
 hash_class_diag.pdf \
 hash_class_diag.png \
 hash_class_diag.txt \
 ka_class_diag.eps \
 ka_class_diag.pdf \
 ka_class_diag.png \
 ka_class_diag.txt \
 ka_seq_diag.eps \
 ka_seq_diag.pdf \
 ka_seq_diag.png \
 ka_seq_diag.txt \
 keyring1_class_diag.eps \
 keyring1_class_diag.pdf \
 keyring1_class_diag.png \
 keyring1_class_diag.txt \
 keyring2_class_diag.eps \
 keyring2_class_diag.pdf \
 keyring2_class_diag.png \
 keyring2_class_diag.txt \
 kp_class_diag.eps \
 kp_class_diag.pdf \
 kp_class_diag.png \
 kp_class_diag.txt \
 kp_generation_seq_diag.eps \
 kp_generation_seq_diag.pdf \
 kp_generation_seq_diag.png \
 kp_generation_seq_diag.txt \
 logo.eps \
 logo.pdf \
 logo.png \
 logo.ps \
 mac_class_diag.eps \
 mac_class_diag.pdf \
 mac_class_diag.png \
 mac_class_diag.txt \
 mode_class_diag.eps \
 mode_class_diag.pdf \
 mode_class_diag.png \
 mode_class_diag.txt \
 pad_class_diag.eps \
 pad_class_diag.pdf \
 pad_class_diag.png \
 pad_class_diag.txt \
 prng_class_diag.eps \
 prng_class_diag.pdf \
 prng_class_diag.png \
 prng_class_diag.txt \
 sasl_class_diag.eps \
 sasl_class_diag.pdf \
 sasl_class_diag.png \
 sasl_class_diag.txt \
 sig_class_diag.eps \
 sig_class_diag.pdf \
 sig_class_diag.png \
 sig_class_diag.txt \
 sign_verify_seq_diag.eps \
 sign_verify_seq_diag.pdf \
 sign_verify_seq_diag.png \
 sign_verify_seq_diag.txt \
 srp_initial.eps \
 srp_initial.pdf \
 srp_initial.png \
 srp_initial.txt \
 srp_reuse.eps \
 srp_reuse.pdf \
 srp_reuse.png \
 srp_reuse.txt \
 stages_diff_dir.eps \
 stages_diff_dir.pdf \
 stages_diff_dir.png \
 stages_diff_dir.txt \
 stages_same_dir.eps \
 stages_same_dir.pdf \
 stages_same_dir.png \
 stages_same_dir.txt
